# opsdeck

./: 404.html  CHANGELOG.md  CI_CD_SETUP.md  CONTRIBUTING.md  LAUNCH_CHECKLIST.md  MANIFEST.in  README.md  REFERENCE_APPS.md  RELEASE_1_1_0.md  SECURITY.md  SUPPORT.md  demo_for_recording.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish-shim.yml  quality.yml  tests.yml
ai-assistants/: index.html
api/: index.html
comparison/: index.html
contributing/: index.html
demo/: RAILWAY.md  README.md  app.py
docs/: ai-assistants.md  api.md  comparison.md  contributing.md  faq.md  features.md  index.md  llms-full.txt  llms.txt  robots.txt
docs/guide/: configuration.md  getting-started.md  integrations.md  migration.md
docs/recipes/: actions-and-ops.md  ai-friendly-integration.md  auth-and-audit.md  migration-from-fastapi-admin.md  multi-tenant-scoping.md
examples/: demo.py  demo_auto.py  demo_db.py
faq/: index.html
fastapi_matrix_admin/core/: admin.py  export.py  router.py
fastapi_matrix_admin/templates/pages/: edit.html
features/: index.html
guide/configuration/: index.html
guide/getting-started/: index.html
guide/integrations/: index.html
guide/migration/: index.html
legacy_shim/: README.md  pyproject.toml
legacy_shim/fastapi_matrix_admin/: __init__.py
opsdeck/: __init__.py
opsdeck/audit/: __init__.py  models.py
opsdeck/auth/: __init__.py  models.py  service.py  utils.py
opsdeck/core/: __init__.py  admin.py  crud.py  database.py  discovery.py  integrator.py  rate_limiter.py  registry.py  router.py  security.py  views.py
opsdeck/templates/components/: buttons.html  cards.html  inputs.html  table.html
opsdeck/templates/fragments/: form_fields.html
opsdeck/templates/layouts/: base.html  base_clean.html
opsdeck/templates/pages/: index.html  list.html  login.html
recipes/actions-and-ops/: index.html
recipes/ai-friendly-integration/: index.html
recipes/auth-and-audit/: index.html
recipes/migration-from-fastapi-admin/: index.html
recipes/multi-tenant-scoping/: index.html
search/: search_index.json
test_app/: README.md  app.py
tests/: test_auth_flow.py  test_production.py  test_security.py
